-Added update the daily incomes and expenses recyclerviews -UI updates -bug fixes